--- a/app/src/main/res/drawable/plus_minus_background.xml
+++ b/app/src/main/res/drawable/plus_minus_background.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
+
     <item android:state_pressed="true"><shape>
         <solid android:color="#565659" />
 
         <stroke android:width="0.0dip" android:color="#eeeeef" />
     </shape></item>
     <item><shape>
-        <solid android:color="#00ffffff" />
+        <solid android:color="@color/lightGray" />
 
         <stroke android:width="0.0dip" android:color="#ffcccccc" />
     </shape></item>
