--- a/app/src/main/res/layout/fragment_shop_cart.xml
+++ b/app/src/main/res/layout/fragment_shop_cart.xml
@@ -4,31 +4,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
+    android:background="@drawable/background"
     >
 
-    <TextView
-        android:id="@+id/fragment_shopcart_title"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:text="购物车"
-        android:textColor="@color/darkgray"
-        android:background="@color/lightGray"/>
+        android:layout_height="60dp"
+        android:background="@drawable/side_nav_bar_opposite"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        >
+
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/logo_trans"
+            android:layout_gravity="center"
+            />
+
+        <TextView
+            android:id="@+id/fragment_shopcart_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:textSize="24sp"
+            android:text="购物车"
+            android:layout_gravity="center"
+            android:textColor="#FFFFFF"
+            />
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="0dp"
+            android:src="@drawable/shopcart"
+            android:layout_gravity="center"
+            />
+
+
+    </LinearLayout>
 
     <View
         android:id="@+id/fragment_shopcart_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/darkgray"/>
+        android:background="@color/white"/>
 
     <View
         android:id="@+id/fragment_shopcart_line2"
         android:layout_width="match_parent"
-        android:layout_marginTop="1dp"
         android:layout_height="1dp"
-        android:background="@color/white"/>
+        android:background="@color/pink"/>
 
     <ListView
         android:id="@+id/shopcart_listview"
