--- a/app/src/main/res/layout/shop_cart_item.xml
+++ b/app/src/main/res/layout/shop_cart_item.xml
@@ -7,7 +7,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="10dp"
         android:background="@color/white"
         />
 
@@ -101,48 +101,48 @@
                     android:text="数量: "
                     android:textSize="14sp"
                     android:textColor="@color/darkgray"/>
-                <Button
+
+                <ImageButton
                     android:id="@+id/shopcart_minus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_toEndOf="@id/count"
                     android:layout_alignTop="@id/count"
-                    android:layout_alignBottom="@id/count"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/plus_minus_background"
-                    android:textSize="14sp"
-                    android:text="－"
-                    android:textColor="@color/darkgray"/>
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="7dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/minus"
+                    android:background="#eeefef"/>
+
                 <TextView
                     android:id="@+id/shopcart_item_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="20dp"
                     android:layout_centerVertical="true"
                     android:text="1"
                     android:textSize="14sp"
+                    android:gravity="center_horizontal"
                     android:layout_toEndOf="@id/shopcart_minus"
+                    android:background="@drawable/textview_boader"
                     android:textColor="@color/darkgray"
                     android:typeface="serif"/>
-                <Button
+
+                <ImageButton
                     android:id="@+id/shopcart_add"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_toEndOf="@id/shopcart_item_number"
-                    android:layout_alignTop="@id/count"
-                    android:layout_alignBottom="@id/count"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/plus_minus_background"
-                    android:textSize="14sp"
-                    android:text="＋"
-                    android:textColor="@color/darkgray"/>
+                    android:layout_alignTop="@id/shopcart_item_number"
+                    android:layout_marginTop="7dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/plus"
+                    android:background="#eeefef"/>
 
                 <TextView
                     android:id="@+id/shopcart_stock_text1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/shopcart_add"
+                    android:layout_toEndOf="@id/shopcart_add"
                     android:text="（库存"
                     android:textSize="14sp"
                     android:textColor="@color/lightGray"
@@ -151,7 +151,7 @@
                     android:id="@+id/shopcart_stock"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/shopcart_stock_text1"
+                    android:layout_toEndOf="@id/shopcart_stock_text1"
                     android:textSize="14sp"
                     android:textColor="@color/lightGray"
                     />
